@@ -22,13 +22,10 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
 import net.jcip.annotations.NotThreadSafe;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
@@ -48,7 +45,6 @@ import com.vaadin.flow.internal.ReflectTools;
 import com.vaadin.flow.server.Constants;
 import com.vaadin.flow.server.frontend.installer.NodeInstaller;
 import com.vaadin.flow.server.frontend.scanner.ClassFinder;
-import com.vaadin.flow.server.frontend.scanner.FrontendDependencies;
 import com.vaadin.tests.util.MockOptions;
 
 import static com.vaadin.flow.server.Constants.PACKAGE_JSON;
@@ -58,7 +54,6 @@ import static com.vaadin.flow.server.frontend.NodeUpdater.DEV_DEPENDENCIES;
 import static com.vaadin.flow.server.frontend.NodeUpdater.HASH_KEY;
 import static com.vaadin.flow.server.frontend.NodeUpdater.PROJECT_FOLDER;
 import static com.vaadin.flow.server.frontend.NodeUpdater.VAADIN_DEP_KEY;
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -93,8 +88,7 @@ class TaskRunNpmInstallTest {
         options = new MockOptions(npmFolder).withBuildDirectory(TARGET)
                 .withBundleBuild(true);
         finder = options.getClassFinder();
-        nodeUpdater = new NodeUpdater(Mockito.mock(FrontendDependencies.class),
-                options) {
+        nodeUpdater = new NodeUpdater(options) {
 
             @Override
             public void execute() {
@@ -289,7 +283,7 @@ class TaskRunNpmInstallTest {
 
         final File localHashFile = new File(options.getNodeModulesFolder(),
                 ".vaadin/vaadin.json");
-        FileUtils.forceMkdirParent(localHashFile);
+        Files.createDirectories(localHashFile.toPath().getParent());
         getNodeUpdater().writePackageFile(localHash, localHashFile);
     }
 
@@ -333,8 +327,7 @@ class TaskRunNpmInstallTest {
         assertTrue(localHashFile.exists(),
                 "Local has file was not created after install.");
 
-        String fileContent = FileUtils.readFileToString(localHashFile,
-                UTF_8.name());
+        String fileContent = Files.readString(localHashFile.toPath());
         JsonNode localHash = JacksonUtils.readTree(fileContent);
         assertNotEquals("", localHash.get(HASH_KEY).asString(),
                 "We should have a non empty hash key");
@@ -358,84 +351,106 @@ class TaskRunNpmInstallTest {
         Mockito.verify(logger).info(getRunningMsg());
     }
 
-    protected void setupEsbuildAndFooInstallation() throws IOException {
+    protected void setupPostinstallPackages() throws IOException {
         File nodeModules = options.getNodeModulesFolder();
         nodeModules.mkdir();
         getNodeUpdater().modified = false;
 
-        // Fake that we have installed "esbuild"
-        File esbuildPackageJson = new File(
-                new File(nodeModules.getParentFile(), "fake-esbuild"),
-                "package.json");
-        String esbuildPackageJsonContents = IOUtils.toString(
-                getClass().getResourceAsStream(
-                        "fake-package-with-postinstall.json"),
-                StandardCharsets.UTF_8);
-        FileUtils.write(esbuildPackageJson, esbuildPackageJsonContents,
-                StandardCharsets.UTF_8);
+        // Pre-populate node_modules/@vaadin/vaadin-usage-statistics/ so that
+        // shouldRunNpmInstall() sees a non-empty node_modules directory.
+        // Note: cleanUp() deletes node_modules before the actual install runs,
+        // so this copy won't survive — the install source is fake-stats/ below.
+        File statsDir = new File(nodeModules,
+                "@vaadin/vaadin-usage-statistics");
+        statsDir.mkdirs();
+        File statsPackageJson = new File(statsDir, "package.json");
+        String statsPackageJsonContents = new String(getClass()
+                .getResourceAsStream("fake-package-with-postinstall.json")
+                .readAllBytes(), StandardCharsets.UTF_8);
+        Files.writeString(statsPackageJson.toPath(), statsPackageJsonContents);
 
-        // Fake that we have installed "foo"
+        // Local install source for "@vaadin/vaadin-usage-statistics".
+        // Must live outside node_modules/ because cleanUp() deletes it
+        // before npm/pnpm install. Using a local path avoids fetching a
+        // non-existent version from the registry.
+        File fakeStatsPackageJson = new File(
+                new File(nodeModules.getParentFile(), "fake-stats"),
+                "package.json");
+        fakeStatsPackageJson.getParentFile().mkdirs();
+        Files.writeString(fakeStatsPackageJson.toPath(),
+                statsPackageJsonContents);
+
+        // Fake that we have installed "foo" (not in the default postinstall
+        // list unless explicitly added)
         File fooPackageJson = new File(
                 new File(nodeModules.getParentFile(), "fake-foo"),
                 "package.json");
-        String fooPackageJsonContents = IOUtils.toString(
-                getClass().getResourceAsStream(
-                        "fake-package-with-postinstall.json"),
-                StandardCharsets.UTF_8);
-        FileUtils.write(fooPackageJson, fooPackageJsonContents,
-                StandardCharsets.UTF_8);
+        String fooPackageJsonContents = new String(getClass()
+                .getResourceAsStream("fake-package-with-postinstall.json")
+                .readAllBytes(), StandardCharsets.UTF_8);
+        fooPackageJson.getParentFile().mkdirs();
+        Files.writeString(fooPackageJson.toPath(), fooPackageJsonContents);
 
         File packageJsonFile = ensurePackageJson();
         JsonNode packageJson = getNodeUpdater().getPackageJson();
-        ((ObjectNode) packageJson.get(DEV_DEPENDENCIES)).put("esbuild",
-                "./fake-esbuild");
+        ((ObjectNode) packageJson.get(DEV_DEPENDENCIES))
+                .put("@vaadin/vaadin-usage-statistics", "./fake-stats");
         ((ObjectNode) packageJson.get(DEV_DEPENDENCIES)).put("foo",
                 "./fake-foo");
-        FileUtils.write(packageJsonFile, packageJson.toString(),
-                StandardCharsets.UTF_8);
+        Files.writeString(packageJsonFile.toPath(), packageJson.toString());
 
     }
 
     @Test
     void runNpmInstall_noPostinstallScript_postIntstallNotExecuted()
             throws IOException, ExecutionFailedException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
 
-        // Remove postinstall script from "esbuild"
-        File esbuildPackageJson = new File(
-                new File(options.getNodeModulesFolder().getParentFile(),
-                        "fake-esbuild"),
-                "package.json");
-        JsonNode esbuildPackageJsonContents = JacksonUtils
-                .readTree(IOUtils.toString(
-                        getClass().getResourceAsStream(
-                                "fake-package-with-postinstall.json"),
-                        StandardCharsets.UTF_8));
-        ((ObjectNode) esbuildPackageJsonContents.get("scripts"))
+        // Remove postinstall script from "@vaadin/vaadin-usage-statistics"
+        // in both the source directory and the node_modules copy, so that
+        // even after npm/pnpm re-installs from source, no postinstall exists
+        JsonNode statsPackageJsonContents = JacksonUtils
+                .readTree(new String(getClass()
+                        .getResourceAsStream(
+                                "fake-package-with-postinstall.json")
+                        .readAllBytes(), StandardCharsets.UTF_8));
+        ((ObjectNode) statsPackageJsonContents.get("scripts"))
                 .remove("postinstall");
-        FileUtils.write(esbuildPackageJson,
-                esbuildPackageJsonContents.toString(), StandardCharsets.UTF_8);
+        String noPostinstallContent = statsPackageJsonContents.toString();
+
+        File statsSourcePackageJson = new File(
+                new File(options.getNpmFolder(), "fake-stats"), "package.json");
+        Files.writeString(statsSourcePackageJson.toPath(),
+                noPostinstallContent);
+
+        File statsNodeModulesPackageJson = new File(
+                new File(options.getNodeModulesFolder(),
+                        "@vaadin/vaadin-usage-statistics"),
+                "package.json");
+        Files.writeString(statsNodeModulesPackageJson.toPath(),
+                noPostinstallContent);
 
         logger = new MockLogger();
         assertTrue(logger.isDebugEnabled());
         task.execute();
 
-        assertFalse(
-                ((MockLogger) logger).getLogs()
-                        .contains("Running postinstall for 'esbuild'"),
-                "esbuild without postinstall should not have been executed");
+        assertFalse(((MockLogger) logger).getLogs().contains(
+                "Running postinstall for '@vaadin/vaadin-usage-statistics'"),
+                "@vaadin/vaadin-usage-statistics without postinstall should not have been executed");
     }
 
     @Test
     void runNpmInstall_postInstall_runOnlyForDefaultPackages()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
         task.execute();
 
         assertTrue(
-                new File(new File(options.getNodeModulesFolder(), "esbuild"),
+                new File(
+                        new File(options.getNodeModulesFolder(),
+                                "@vaadin/vaadin-usage-statistics"),
                         "postinstall-file.txt").exists(),
-                "Postinstall for 'esbuild' was not run");
+                "Postinstall for '@vaadin/vaadin-usage-statistics' was not run");
         assertFalse(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
                         "postinstall-file.txt").exists(),
@@ -445,14 +460,16 @@ class TaskRunNpmInstallTest {
     @Test
     void runNpmInstall_postInstall_runForDefinedAdditionalPackages()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
-        task = createTask(Collections.singletonList("foo"));
+        setupPostinstallPackages();
+        task = createTask(List.of("foo"));
         task.execute();
 
         assertTrue(
-                new File(new File(options.getNodeModulesFolder(), "esbuild"),
+                new File(
+                        new File(options.getNodeModulesFolder(),
+                                "@vaadin/vaadin-usage-statistics"),
                         "postinstall-file.txt").exists(),
-                "Postinstall for 'esbuild' was not run");
+                "Postinstall for '@vaadin/vaadin-usage-statistics' was not run");
         assertTrue(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
                         "postinstall-file.txt").exists(),
@@ -464,20 +481,19 @@ class TaskRunNpmInstallTest {
     @Timeout(30)
     void runNpmInstall_postInstallWritingLotsOfOutput_processDoesNotStuck()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
 
         File nodeModules = options.getNodeModulesFolder();
         File fooPackageJson = new File(
                 new File(nodeModules.getParentFile(), "fake-foo"),
                 "package.json");
-        String fooPackageJsonContents = IOUtils.toString(
-                getClass().getResourceAsStream(
-                        "fake-package-with-postinstall-writing-to-console.json"),
-                StandardCharsets.UTF_8);
-        FileUtils.write(fooPackageJson, fooPackageJsonContents,
-                StandardCharsets.UTF_8);
+        String fooPackageJsonContents = new String(getClass()
+                .getResourceAsStream(
+                        "fake-package-with-postinstall-writing-to-console.json")
+                .readAllBytes(), StandardCharsets.UTF_8);
+        Files.writeString(fooPackageJson.toPath(), fooPackageJsonContents);
 
-        task = createTask(Collections.singletonList("foo"));
+        task = createTask(List.of("foo"));
         task.execute();
 
         assertTrue(
@@ -488,7 +504,7 @@ class TaskRunNpmInstallTest {
 
     @Test
     void shouldRunNpmInstallWhenFolderChanges() throws Exception {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
 
         String packageJsonHash = getNodeUpdater().getPackageJson()
                 .get(VAADIN_DEP_KEY).get(HASH_KEY).asString();
@@ -496,14 +512,12 @@ class TaskRunNpmInstallTest {
         vaadinJson.put(HASH_KEY, packageJsonHash);
         vaadinJson.put(PROJECT_FOLDER, npmFolder.getAbsolutePath());
         File vaadinJsonFile = getNodeUpdater().getVaadinJsonFile();
-
-        FileUtils.writeStringToFile(vaadinJsonFile, vaadinJson.toString(),
-                UTF_8);
+        Files.createDirectories(vaadinJsonFile.toPath().getParent());
+        Files.writeString(vaadinJsonFile.toPath(), vaadinJson.toString());
 
         assertFalse(task.isVaadinHashOrProjectFolderUpdated());
         vaadinJson.put(PROJECT_FOLDER, npmFolder.getAbsolutePath() + "foo");
-        FileUtils.writeStringToFile(vaadinJsonFile, vaadinJson.toString(),
-                UTF_8);
+        Files.writeString(vaadinJsonFile.toPath(), vaadinJson.toString());
         assertTrue(task.isVaadinHashOrProjectFolderUpdated());
     }
 
@@ -555,7 +569,7 @@ class TaskRunNpmInstallTest {
                                     + "/node.exe"
                             : "node-" + FrontendTools.DEFAULT_NODE_VERSION
                                     + "/bin/node");
-            FileUtils.forceMkdir(node);
+            Files.createDirectories(node.toPath());
 
             assertTrue(node.isDirectory(),
                     "node executable should be a directory");
@@ -633,8 +647,7 @@ class TaskRunNpmInstallTest {
                   "packages": {}
                 }
                 """;
-        FileUtils.write(packageLockFile, packageLockContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageLockFile.toPath(), packageLockContent);
 
         task.verifyPackageLockAndClean();
 
@@ -657,8 +670,7 @@ class TaskRunNpmInstallTest {
                   "packages": {}
                 }
                 """;
-        FileUtils.write(packageLockFile, packageLockContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageLockFile.toPath(), packageLockContent);
 
         task.verifyPackageLockAndClean();
 
@@ -681,8 +693,7 @@ class TaskRunNpmInstallTest {
                   "dependencies": {}
                 }
                 """;
-        FileUtils.write(packageLockFile, packageLockContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageLockFile.toPath(), packageLockContent);
 
         task.verifyPackageLockAndClean();
 
@@ -703,8 +714,7 @@ class TaskRunNpmInstallTest {
                   "packages": {}
                 }
                 """;
-        FileUtils.write(packageLockFile, packageLockContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageLockFile.toPath(), packageLockContent);
 
         task.verifyPackageLockAndClean();
 
@@ -728,8 +738,7 @@ class TaskRunNpmInstallTest {
                   "packages": {}
                 }
                 """;
-        FileUtils.write(packageLockFile, packageLockContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageLockFile.toPath(), packageLockContent);
 
         task.verifyPackageLockAndClean();
 
