@@ -19,13 +19,11 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import net.jcip.annotations.NotThreadSafe;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
@@ -40,7 +38,6 @@ import com.vaadin.flow.internal.JacksonUtils;
 import com.vaadin.flow.server.Constants;
 import com.vaadin.flow.server.frontend.installer.NodeInstaller;
 import com.vaadin.flow.server.frontend.scanner.ClassFinder;
-import com.vaadin.flow.server.frontend.scanner.FrontendDependencies;
 
 import static com.vaadin.flow.server.Constants.PACKAGE_JSON;
 import static com.vaadin.flow.server.Constants.TARGET;
@@ -53,8 +50,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
 
     private static final String PINNED_VERSION = "3.2.17";
-    private static final List<String> POSTINSTALL_PACKAGES = Collections
-            .singletonList("esbuild");
+    private static final List<String> POSTINSTALL_PACKAGES = List
+            .of("@vaadin/vaadin-usage-statistics");
 
     @Override
     @BeforeEach
@@ -63,8 +60,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
 
         // create an empty package.json so as pnpm can be run without
         // error
-        FileUtils.write(new File(npmFolder, PACKAGE_JSON), "{}",
-                StandardCharsets.UTF_8);
+        Files.writeString(new File(npmFolder, PACKAGE_JSON).toPath(), "{}");
     }
 
     @Override
@@ -72,7 +68,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     void runNpmInstall_toolIsChanged_nodeModulesIsRemoved()
             throws ExecutionFailedException, IOException {
         File nodeModules = options.getNodeModulesFolder();
-        FileUtils.forceMkdir(nodeModules);
+        Files.createDirectories(nodeModules.toPath());
 
         // create a fake file in the node modules dir to check that it's
         // removed
@@ -95,9 +91,8 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         // create some package.json file so pnpm does some installation
         // into
         // node_modules folder
-        FileUtils.write(packageJson,
-                "{\"dependencies\": {" + "\"pnpm\": \"5.15.1\"}}",
-                StandardCharsets.UTF_8);
+        Files.writeString(packageJson.toPath(),
+                "{\"dependencies\": {" + "\"pnpm\": \"5.15.1\"}}");
 
         getNodeUpdater().modified = true;
         createTask().execute();
@@ -120,18 +115,18 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         packageJson.createNewFile();
 
         // Write package json file
-        FileUtils.write(packageJson, "{}", StandardCharsets.UTF_8);
+        Files.writeString(packageJson.toPath(), "{}");
 
         File versions = File.createTempFile("tmp", null, temporaryFolder);
         // Platform defines a pinned version
         // @formatter:off
-        FileUtils.write(versions, String.format(
+        Files.writeString(versions.toPath(), String.format(
                 "{"
                   + "\"vaadin-overlay\": {"
                     + "\"npmName\": \"@vaadin/vaadin-overlay\","
                     + "\"jsVersion\": \"%s\""
                   + "}"
-                + "}", PINNED_VERSION), StandardCharsets.UTF_8);
+                + "}", PINNED_VERSION));
         // @formatter:on
 
         JsonNode object = getGeneratedVersionsContent(versions, packageJson);
@@ -154,7 +149,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         String notificationVersion = "1.4.0";
         String uploadVersion = "4.2.0";
         // @formatter:off
-        FileUtils.write(packageJson, String.format(
+        Files.writeString(packageJson.toPath(), String.format(
                 "{"
                     + "\"vaadin\": {"
                       + "\"dependencies\": {"
@@ -173,7 +168,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 + "}",
                 loginVersion, "1.0.0", notificationVersion,
                 "4.0.0", loginVersion, menuVersion, notificationVersion,
-                uploadVersion), StandardCharsets.UTF_8);
+                uploadVersion));
         // @formatter:on
         // Platform defines a pinned version
 
@@ -184,7 +179,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
 
         File versions = File.createTempFile("tmp", null, temporaryFolder);
         // @formatter:off
-        FileUtils.write(versions,String.format(
+        Files.writeString(versions.toPath(), String.format(
                 "{"
                     + "\"vaadin-login\": {"
                         + "\"npmName\": \"@vaadin/vaadin-login\","
@@ -204,7 +199,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                     + "}"
                 + "}",
                 versionsLoginVersion, versionsMenuBarVersion,
-                versionsNotificationVersion, versionsUploadVersion), StandardCharsets.UTF_8);
+                versionsNotificationVersion, versionsUploadVersion));
         // @formatter:on
 
         JsonNode generatedVersions = getGeneratedVersionsContent(versions,
@@ -226,8 +221,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
 
         File npmRcFile = new File(npmFolder, ".npmrc");
         assertTrue(npmRcFile.exists());
-        String content = FileUtils.readFileToString(npmRcFile,
-                StandardCharsets.UTF_8);
+        String content = Files.readString(npmRcFile.toPath());
         assertTrue(content.contains("shamefully-hoist"));
     }
 
@@ -240,16 +234,14 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 + "shamefully-hoist=true\n"
                 + "symlink=true\n";
         // @formatter:on
-        FileUtils.writeStringToFile(oldNpmRcFile, originalContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(oldNpmRcFile.toPath(), originalContent);
 
         TaskRunNpmInstall task = createTask();
         task.execute();
 
         File newNpmRcFile = new File(npmFolder, ".npmrc");
         assertTrue(newNpmRcFile.exists());
-        String content = FileUtils.readFileToString(newNpmRcFile,
-                StandardCharsets.UTF_8);
+        String content = Files.readString(newNpmRcFile.toPath());
         assertTrue(content.contains("shamefully-hoist"));
         assertFalse(content.contains("symlink=true"));
     }
@@ -262,16 +254,14 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         String originalContent = "# A custom npmrc file for my project\n"
                 + "symlink=true\n";
         // @formatter:on
-        FileUtils.writeStringToFile(oldNpmRcFile, originalContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(oldNpmRcFile.toPath(), originalContent);
 
         TaskRunNpmInstall task = createTask();
         task.execute();
 
         File newNpmRcFile = new File(npmFolder, ".npmrc");
         assertTrue(newNpmRcFile.exists());
-        String content = FileUtils.readFileToString(newNpmRcFile,
-                StandardCharsets.UTF_8);
+        String content = Files.readString(newNpmRcFile.toPath());
         assertEquals(originalContent, content);
     }
 
@@ -292,8 +282,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 + "}"
             + "}";
         // @formatter:on
-        FileUtils.write(packageJson, packageJsonContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageJson.toPath(), packageJsonContent);
 
         final VersionsJsonFilter versionsJsonFilter = new VersionsJsonFilter(
                 JacksonUtils.readTree(packageJsonContent),
@@ -311,8 +300,8 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 "@vaadin/vaadin-overlay/package.json");
 
         // The resulting version should be the one specified by the user
-        JsonNode overlayPackage = JacksonUtils.readTree(FileUtils
-                .readFileToString(overlayPackageJson, StandardCharsets.UTF_8));
+        JsonNode overlayPackage = JacksonUtils
+                .readTree(Files.readString(overlayPackageJson.toPath()));
         assertEquals(customOverlayVersion,
                 overlayPackage.get("version").asString());
     }
@@ -320,14 +309,16 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     @Test
     void runPnpmInstall_postInstall_runOnlyForDefaultPackages()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
         TaskRunNpmInstall task = createTask();
         task.execute();
 
         assertTrue(
-                new File(new File(options.getNodeModulesFolder(), "esbuild"),
+                new File(
+                        new File(options.getNodeModulesFolder(),
+                                "@vaadin/vaadin-usage-statistics"),
                         "postinstall-file.txt").exists(),
-                "Postinstall for 'esbuild' was not run");
+                "Postinstall for '@vaadin/vaadin-usage-statistics' was not run");
         assertFalse(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
                         "postinstall-file.txt").exists(),
@@ -337,14 +328,16 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     @Test
     void runPnpmInstall_postInstall_runForDefinedAdditionalPackages()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
-        TaskRunNpmInstall task = createTask(Collections.singletonList("foo"));
+        setupPostinstallPackages();
+        TaskRunNpmInstall task = createTask(List.of("foo"));
         task.execute();
 
         assertTrue(
-                new File(new File(options.getNodeModulesFolder(), "esbuild"),
+                new File(
+                        new File(options.getNodeModulesFolder(),
+                                "@vaadin/vaadin-usage-statistics"),
                         "postinstall-file.txt").exists(),
-                "Postinstall for 'esbuild' was not run");
+                "Postinstall for '@vaadin/vaadin-usage-statistics' was not run");
         assertTrue(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
                         "postinstall-file.txt").exists(),
@@ -356,20 +349,19 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     @Timeout(30)
     void runNpmInstall_postInstallWritingLotsOfOutput_processDoesNotStuck()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
 
         File nodeModules = options.getNodeModulesFolder();
         File fooPackageJson = new File(
                 new File(nodeModules.getParentFile(), "fake-foo"),
                 "package.json");
-        String fooPackageJsonContents = IOUtils.toString(
-                getClass().getResourceAsStream(
-                        "fake-package-with-postinstall-writing-to-console.json"),
-                StandardCharsets.UTF_8);
-        FileUtils.write(fooPackageJson, fooPackageJsonContents,
-                StandardCharsets.UTF_8);
+        String fooPackageJsonContents = new String(getClass()
+                .getResourceAsStream(
+                        "fake-package-with-postinstall-writing-to-console.json")
+                .readAllBytes(), StandardCharsets.UTF_8);
+        Files.writeString(fooPackageJson.toPath(), fooPackageJsonContents);
 
-        TaskRunNpmInstall task = createTask(Collections.singletonList("foo"));
+        TaskRunNpmInstall task = createTask(List.of("foo"));
         task.execute();
 
         assertTrue(
@@ -398,7 +390,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     }
 
     @Test
-    public void runPnpmInstall_devMode_usesNoFrozenLockfile()
+    void runPnpmInstall_devMode_usesNoFrozenLockfile()
             throws ExecutionFailedException, IOException {
         TaskRunNpmInstall task = createTask();
         getNodeUpdater().modified = true;
@@ -414,7 +406,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     }
 
     @Test
-    public void runPnpmInstall_ciBuild_usesFrozenLockfile()
+    void runPnpmInstall_ciBuild_usesFrozenLockfile()
             throws ExecutionFailedException, IOException {
         TaskRunNpmInstall ciTask = createCiTask();
         getNodeUpdater().modified = true;
@@ -478,8 +470,8 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 classFinder.getResource(Constants.VAADIN_CORE_VERSIONS_JSON))
                 .thenReturn(versions.toURI().toURL());
 
-        ObjectNode packageJson = JacksonUtils.readTree(FileUtils
-                .readFileToString(packageJsonFile, StandardCharsets.UTF_8));
+        ObjectNode packageJson = JacksonUtils
+                .readTree(Files.readString(packageJsonFile.toPath()));
         getNodeUpdater().generateVersionsJson(packageJson);
         return getNodeUpdater().versionsJson;
     }
@@ -499,8 +491,7 @@ class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     private NodeUpdater createNodeUpdater(String versionsContent) {
         options.withBuildDirectory(TARGET);
 
-        return new NodeUpdater(Mockito.mock(FrontendDependencies.class),
-                options) {
+        return new NodeUpdater(options) {
 
             @Override
             public void execute() {
